# rimg

./: Cargo.toml  README.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: constant.rs  executor.rs  main.rs  params.rs  validator.rs
src/constants/: file.rs
src/executor/: compress.rs  convert.rs  mod.rs  rename.rs  utils.rs
src/params/: compress.rs  convert.rs  mod.rs  rename.rs
src/validation/: filepath.rs
