[package]
name = "rimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
human-sort = "0.2.2"
indicatif = "0.17.1"
question = "0.2.2"
uuid = { version = "1.2.1", features = ["v4"] }
walkdir = "2.3.2"
