[package]
edition = "2021"
name = "rimg"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
colored = "3.0.0"
execute = "0.2.11"
indicatif = "0.17.1"
question = "0.2.2"
rayon = "1.8.0"
uuid = { version = "1.2.1", features = ["v4"] }
walkdir = "2.3.2"
zip = "2.3.0"

[profile.release]
lto = true
opt-level = "z"
